--- a/css.css
+++ b/css.css
@@ -9,7 +9,6 @@
 
 #row2{
   height: 1000px;
-
   background-color: #333333;
   color: #f2f2f2;
   border-bottom: 3px solid black;
@@ -99,6 +98,7 @@ body{
   animation-duration: 6s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
+  overflow-x: hidden;
 }
 
 ul{
