--- a/css.css
+++ b/css.css
@@ -1,9 +1,16 @@
+
+.container-fluid {
+    padding-right:0;
+    padding-left:0;
+    margin-right:auto;
+    margin-left:auto
+ }
+
 #rowf{
   background-color: #f2f2f2;
   height: 700px;
   border-bottom: 3px solid black;
   border-top: 3px solid black;
-
 
 }
 
@@ -98,7 +105,7 @@ body{
   animation-duration: 6s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  overflow-x: hidden;
+
 }
 
 ul{
