--- a/css.css
+++ b/css.css
@@ -96,7 +96,7 @@ footer{
 
 html,body{
   background-color: yellow;
-  overflow: scroll;
+  overflow: hidden;
   animation-name: foot;
   animation-duration: 6s;
   animation-timing-function: linear;
