--- a/css.css
+++ b/css.css
@@ -98,7 +98,7 @@ footer{
 
 html,body{
   background-color: yellow;
-  overflow: hidden;
+  overflow: auto;
   animation-name: foot;
   animation-duration: 6s;
   animation-timing-function: linear;
