--- a/css.css
+++ b/css.css
@@ -81,7 +81,7 @@ html,body{
   animation-duration: 6s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  -webkit-overflow-scrolling: touch;
+  height: 100%;
 }
 
 ul{
