--- a/css.css
+++ b/css.css
@@ -29,9 +29,10 @@
 
 .col-{
   width: 100%;
-  margin-left: 250px;
+  margin-left: 175px;
   margin-top: 50px;
   margin-right: 150px;
+  max-height: 700px;
 }
 
 
