--- a/css.css
+++ b/css.css
@@ -5,6 +5,7 @@
   height: 1500px;
   border-bottom: 3px solid black;
   border-top: 3px solid black;
+  overflow: scroll;
 
 }
 
@@ -27,6 +28,7 @@
   background-color: #f2f2f2;
   height: 500px;
 }
+
 
 
 .col{
