--- a/css.css
+++ b/css.css
@@ -55,6 +55,7 @@ header{
         background-color: #333333;
         text-align: center;
         color: #f2f2f2;
+        overflow: hidden;
 }
 
 header h1{
