--- a/css.css
+++ b/css.css
@@ -50,12 +50,13 @@
   margin-top: 100px;
 }
 
-header{
+.jumbotron{
         height: 200px;
         background-color: #333333;
         text-align: center;
         color: #f2f2f2;
-        overflow: hidden;
+        overflow: auto;
+        margin-bottom: 0;
 }
 
 header h1{
