--- a/css.css
+++ b/css.css
@@ -16,8 +16,8 @@
   color: #f2f2f2;
   border-bottom: 3px solid black;
   display: none;
-  margin-right: 0px;
-  overflow: scroll;
+  margin-right: -15px;
+  overflow-y: scroll;
 }
 
 #row3{
@@ -35,9 +35,6 @@
 
 
 
-.col-{
-
-}
 
 .col-{
 
