--- a/css.css
+++ b/css.css
@@ -54,7 +54,7 @@
   margin-top: 100px;
 }
 
-.jumbotron{
+.jumbotron-fluid{
         height: 200px;
         background-color: #333333;
         text-align: center;
