--- a/css.css
+++ b/css.css
@@ -33,14 +33,17 @@
   overflow: scroll;
 }
 
-
+.col-xl{
+  margin-left: 15px;
+  margin-right: 15px;
+}
 
 
 .col-{
 
   margin-left: 10px;
   margin-top: 50px;
-  margin-right: 0px;
+  margin-right: 10px;
   max-height: 700px;
 }
 
