--- a/css.css
+++ b/css.css
@@ -45,6 +45,7 @@
   margin-top: 50px;
   margin-right: 10px;
   max-height: 700px;
+  padding: -15px;
 }
 
 #col2{
@@ -64,6 +65,10 @@
         color: #f2f2f2;
         overflow: auto;
         margin-bottom: 0;
+}
+
+.jumbotron-fluid h1{
+    margin-top: 35px;
 }
 
 header h1{
