--- a/css.css
+++ b/css.css
@@ -5,8 +5,8 @@
   height: 700px;
   border-bottom: 3px solid black;
   border-top: 3px solid black;
-  overflow: scroll;
-  margin-right: 0px;
+  overflow-y: scroll;
+
 
 }
 
@@ -30,14 +30,14 @@
 #row4{
   background-color: #f2f2f2;
   min-height: 500px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .col-xl{
-  margin-left: 15px;
+  margin-left: 55px;
   margin-right: 15px;
+  margin-top: 50px;
 }
-
 
 .col-{
 
@@ -45,7 +45,7 @@
   margin-top: 50px;
   margin-right: 10px;
   max-height: 700px;
-  padding: 0px;
+
 }
 
 #col2{
@@ -69,11 +69,7 @@
 
 .jumbotron-fluid h1{
     margin-top: 35px;
-}
-
-header h1{
- position: relative;
- top: 75px;
+    text-shadow:-1px 0 blue, 0 1px blue, 1px 0 blue, 0 -1px blue;
 }
 
 footer{
@@ -133,6 +129,11 @@ a{
   color: white;
   font-size: 24px;
 
+}
 
+
+.navbar-nav{
+position:relative;
+  left:25px;
 
 }
